# corradinizini-bank-classification

./: README.md  pyproject.toml
data-software/: README.md  bank_dataset_ml copy.ipynb  bank_dataset_ml.ipynb  bank_dataset_ml_version2.ipynb  eda.ipynb
doc/: presentation.tex
doc/sources/: beamerinnerthemeunibotesi.sty
